# sidekick

./: .dockerignore  .gitignore  Cargo.toml  README.md  config.toml
server/: Cargo.toml  config.toml  dev.sh
server/data/: sidekick.db
server/data/users/4abaac2c-dd2d-4f11-abe9-349d46eb6a3c.lancedb/conversations.lance/_transactions/: 0-43a1fb8f-a17e-415e-bc18-c848ddb05d9a.txn  1-ea7d14d8-f9c1-4166-b64a-2335aaaca843.txn  10-77d446c2-58c9-4e41-a9b5-0d32dc2bb58c.txn  11-9af6a313-a22d-47ca-b727-088e3eb97883.txn  12-e6325572-29ca-4d85-9d75-d175d2c77692.txn  13-060a5207-2edb-4ed0-a63b-ce685dcd4f7d.txn  2-8dfcbfb9-3f72-4e00-9131-9bd9a6cd55ef.txn  3-02f6356d-7981-422a-a671-1bac21479eb4.txn  4-3fd14727-26a7-41bd-b9ea-d17a1507c7ce.txn  5-bcfd2825-ec56-4cf0-ac20-989f1b9ddf86.txn  6-d296b634-8b42-42c2-a00a-5a77d63a5ced.txn  7-ba54d52b-ea98-4e09-832b-d66ea2b57fa3.txn  8-b664e3ea-0b67-4c6b-8883-661507aeb18b.txn  9-07885a89-d8fc-41b8-94d5-9a5a1fa54ae1.txn
server/data/users/walter.lancedb/conversations.lance/_transactions/: 0-2a283d0d-15cb-4756-9fb5-0b647c5332a1.txn  1-630b429b-85e9-48c1-a917-01b16e43b5c1.txn  10-bfba1733-c0f1-46b1-8304-8ee3450fdc34.txn  11-3b1d8666-1378-4e92-9248-fcc7589e7226.txn  12-ca3a25e7-c5e1-45ac-9abc-1cf5e2716586.txn  (+29 more)
server/flyio/: Dockerfile  deploy.sh  fly.toml
server/src/: chat_service.rs  config.rs  context.rs  coordinator.rs  embeddings.rs  error.rs  history.rs  main.rs  memory.rs  migrations.rs  stt.rs  user.rs
server/src/auth/: mod.rs  oauth.rs  routes.rs  tokens.rs
server/src/tools/: find_agents.rs  gmail.rs  google_api.rs  google_calendar.rs  google_people.rs  google_tasks.rs  mod.rs  recall_memory.rs  retry_wrapper.rs  start_coordination.rs  web_search.rs
(+104 files in other folders)
