[package]
name = "sidekick"
version = "0.1.0"
edition = "2024"

[dependencies]
synaptic = { version = "0.4", features = ["agent", "model-utils", "openai", "anthropic", "ollama", "gemini"] }
lancedb = "0.26"
lance-index = "2.0"
arrow-array = "57"
arrow-schema = "57"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
