[package]
name = "sidekick-server"
version = "0.1.0"
edition = "2024"

[dependencies]
synaptic = { version = "0.4", features = ["agent", "model-utils", "memory", "store", "openai", "anthropic", "ollama", "gemini"] }
lancedb = "0.26"
lance-index = "2.0"
arrow-array = "57"
arrow-schema = "57"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.14"
axum-login = "0.18"
tower-sessions = "0.14"
oauth2 = "5"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
rust-embed = "8.11.0"
mime_guess = "2.0.5"
axum-extra = { version = "0.12.5", features = ["cookie-private"] }
